--- a/frontend/src/app/views/sign-up-page/sign-up-page.css
+++ b/frontend/src/app/views/sign-up-page/sign-up-page.css
@@ -1,6 +1,7 @@
 :host {
   display: block;
   font-family: var(--app-font);
+  color-scheme: light;
 }
 
 .signup-wrapper {
